<resources>
    <string name="app_name">FamilySearch Android Sample App</string>

    <!-- Login activity -->
    <string name="login_username_label">Username:</string>
    <string name="login_username_hint">username</string>
    <string name="login_password_label">Password:</string>
    <string name="login_password_hint">password</string>
    <string name="login_button_login">Login</string>
    <string name="login_progress_message">Logging in...</string>

    <!-- Tree activity -->
    <string name="tree_downloading_geneaology">Downloading your geneaology...</string>

    <!-- Error messages -->
    <string name="login_error_catalogs">Error getting the collection urls</string>
    <string name="login_error_token">Error getting the token. Check username and password</string>
    <string name="title_activity_current_user">CurrentUserActivity</string>

</resources>
