<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.familysearch.sampleapp.LoginActivity"
    android:background="@color/colorGrayLight">

    <LinearLayout
        android:id="@+id/login_layout_fields"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_centerHorizontal="true"
        android:background="@color/colorWhite">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_familysearchlogo"
            android:layout_gravity="center_horizontal"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_username_label"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight=".3"
            />

            <EditText
                android:id="@+id/login_username"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:hint="@string/login_username_hint"
                android:layout_weight=".7"
            />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login_password_label"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                android:gravity="end"
                android:layout_weight=".3"
            />

            <EditText
                android:id="@+id/login_password"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:padding="10sp"
                android:hint="@string/login_password_hint"
                android:layout_weight=".7"
                android:inputType="textPassword"
            />

        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/login_btn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/login_layout_fields"
        android:layout_marginTop="10dp"
        android:text="@string/login_button_login"
        android:background="@color/colorPrimary"
        android:textColor="@color/colorWhite"/>

</RelativeLayout>
